# eneo-common-package-backend

./: .env.example  README.md  gitignore  pyproject.toml
eneo_common/: __init__.py  authentication.py  exceptions.py  middleware.py  models.py  permissions.py  settings.py
eneo_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eneo_common/utils/: __init__.py  keycloak.py
tests/: conftest.py  django_settings.py  test_authentication.py  test_middleware.py  test_permissions.py
